[gd_scene load_steps=2 format=3 uid="uid://cj2lqo5v3djlh"]

[ext_resource type="Script" path="res://Scripts/GUI/menu.gd" id="1_yuswx"]

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_yuswx")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -132.0
offset_right = 128.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
text = "Game is paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="QuitGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 49.0
offset_right = 128.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit game"

[node name="Exit" type="Button" parent="."]
offset_left = 1088.0
offset_right = 1147.0
offset_bottom = 32.0
text = "Exit"
icon_alignment = 2
vertical_icon_alignment = 0

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
